# bridge-eth

./: .bridge_escrow.config  Cargo.toml  README.md  get-balance.sh  get-locked-info.sh  test-deposit.sh  test-escrow.sh
bridge-ethers/: Cargo.toml
bridge-ethers/src/: BridgeEscrow.rs  OLToken.rs  bridge_escrow.rs  bridge_escrow_mod.rs  config.rs  lib.rs  ol_token.rs  signers.rs  util.rs
src/: main.rs
