[package]
name = "bridge-eth"
version = "0.1.0"
authors = ["coin1111 <celticsnow123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.1.3"
serde_json = "1.0"
bridge-ethers = {path ="./bridge-ethers"}
